# e-charlar

./: Cargo.toml  README.md
console-client/: Cargo.toml
echarlar/: README.md  package-lock.json  package.json
echarlar/src/: App.css  App.tsx
echarlar/src-tauri/: Cargo.toml  tauri.conf.json
echarlar/src-tauri/src/: lib.rs  main.rs
echarlar/src/components/chat/: index.tsx
experimental/: Cargo.toml
experimental/chat-v2/client/: Cargo.toml
experimental/chat-v2/server/: Cargo.toml
experimental/chat-v2/server/src/: main.rs
experimental/chat-v3/server/: Cargo.toml
experimental/chat-v3/server/src/: main.rs
experimental/src/: main.rs
server/: Cargo.toml
server/src/: cli.rs  logging.rs  main.rs  server.rs
server/src/db/: db.rs  mod.rs  rocksdb.rs
shared/: Cargo.toml
shared/src/: types.rs
src/: main.rs
