[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <e-charlar@volmyr.com>"]
repository = "https://github.com/volodymyrd/e-charlar"
homepage = "https://github.com/volodymyrd/e-charlar"
license = "Apache-2.0"
edition = "2021"

[workspace]
members = [
    "console-client",
    "echarlar/src-tauri",
    "server",
    "experimental",
    "experimental/chat-v2/server",
    "experimental/chat-v3/server",
    "shared"
]

resolver = "2"

[workspace.dependencies]
shared = { path = "shared" }

anyhow = "1.0.97"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3.31"
rand = "0.9.0"
tempfile = "3.19.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
